# rs-github-commit-tracker

./: .gitignore  Cargo.toml  samconfig.toml  template.yaml
src/: main.rs
