[package]
name = "github-commit-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "0.55.3"
aws_lambda_events = { version = "0.7.3", default-features = false, features = ["apigw"] }
lambda_runtime = "0.8.0"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter"] }
serde = "1.0.163"
serde_json = "1.0.96"
octocrab = "0.28"
http = "0.2.9"
svg = "0.13.1"
usvg = "0.35.0"
chrono = "0.4.26"

